# 3DCG

docs/design/: maya-mcp-specification.md
maya-mcp/: .gitignore  README.md  pyproject.toml
maya-mcp/maya_plugin/: maya_mcp_bridge.py
maya-mcp/maya_plugin/ui/: __init__.py  panel.py  style.py  tab_asset_browser.py  tab_connection.py  tab_generation.py  widgets.py  workers.py
maya-mcp/src/maya_mcp/: __init__.py  config.py  maya_client.py  server.py
maya-mcp/src/maya_mcp/providers/: __init__.py  base.py  meshy.py  rodin.py  tripo.py
maya-mcp/src/maya_mcp/resources/: __init__.py  scene.py
maya-mcp/src/maya_mcp/tools/: __init__.py  animation.py  general.py  generation.py  material.py  object.py  render.py  scene.py  transform.py
maya-mcp/tests/: test_maya_client.py  test_providers.py  test_server.py
